# giglizip

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  downloads.html
.github/workflows/: ci.yml  release.yml
Formula/: giglizip-compress.rb
benches/: compression_bench.rs
docs/: book.toml
docs/src/: SUMMARY.md  intro.md  usage.md
examples/: library_usage.rs  simple_cli.rs
scripts/: generate-installer.ps1  installer.iss  package-deb.toml  release.ps1  release.sh  setup-windows.ps1
src/: compress.rs  decompress.rs  lib.rs
src/utils/: dict.rs  entropy.rs  framing.rs  mod.rs
tests/: integration.rs
