[package]
name = "giglizip-compress"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A fast, multi-algorithm compression CLI and library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/your/repo"

[dependencies]
zstd-safe = "*"
lz4 = "*"
fse = "*"
rayon = { version = "*", optional = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = "*"
assert_cmd = "*"

[features]
default = []
parallel = ["rayon"]
dict = []
ppmd = []
