[package]
name = "giglizip"
version = "1.0.0"
edition = "2021"
authors = ["Junaid Ali Shah Gigli (overview.jjj@gmail.com)"]
description = "A fast, multi-algorithm compression CLI and library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jasgigli/GigliZip"

[dependencies]
zstd-safe = "*"
lz4 = "*"
fse = "*"
rayon = { version = "*", optional = true }
clap = { version = "4", features = ["derive"] }
anyhow = "*"
crc32fast = "*"
indicatif = "*"
dialoguer = "*"

[dev-dependencies]
criterion = "*"
assert_cmd = "*"

[features]
default = []
parallel = ["rayon"]
dict = []
ppmd = []
